# eureka

./: .gitignore  CMakeLists.txt  README.markdown  api_wishlist.md
demos/: CMakeLists.txt
demos/ekconsole/: CMakeLists.txt  main.c
demos/ektest/: CMakeLists.txt  dict.ek  heredoc.ek  main.c  print_r.ek  refs.ek  regex.ek
demos/yapconsole/: CMakeLists.txt  main.c
demos/yapgame/: CMakeLists.txt  main.c
demos/yaptest/: CMakeLists.txt  bitwise.yap  closure.yap  coverage.yap  main.c  print_r.yap  refs.yap  regex.yap  test.yap  test_c.yap
docs/: faq.txt  guts.txt  tour.txt
eureka/: CMakeLists.txt  main.c
eureka/core/: ek.h  ekArray.c  ekArray.h  ekBlock.c  ekBlock.h  ekChunk.c  ekChunk.h  ekCode.c  ekCode.h  ekCompiler.c  ekCompiler.h  ekContext.c  ekContext.h  ekFrame.c  ekFrame.h  ekIntrinsics.c  ekIntrinsics.h  ekLexer.c  ekLexer.h  ekLexer.re  ekLexer.re.c  ekMap.c  ekMap.h  ekObject.c  ekObject.h  ekOp.h  ekParser.c  ekParser.h  ekParser.lt  ekParser.y  ekString.c  ekString.h  ekSyntax.c  ekSyntax.h  ekTypes.c  ekTypes.h  ekValue.c  ekValue.h  ekValueType.c  ekValueType.h  (+9 more)
eureka/docsrc/: guts.ekd  tour.ekd
eureka/extras/: ekxDisasm.c  ekxDisasm.h  ekxDot.c  ekxDot.h
eureka/intrinsics/: ekiConversions.c  ekiConversions.h  ekiCore.c  ekiCore.h  ekiInheritance.c  ekiInheritance.h
eureka/modules/: ekmAll.c  ekmAll.h  ekmJSON.c  ekmJSON.h  ekmPCRE.c  ekmPCRE.h
ext/: CMakeLists.txt
ext/cJSON/: CMakeLists.txt
ext/pcre/: CMakeLists.txt
lib/: CMakeLists.txt  ekArray.c  ekArray.h  ekBlock.c  ekBlock.h  ekChunk.c  ekChunk.h  ekCode.c  ekCode.h  ekCompiler.c  ekCompiler.h  ekContext.c  ekContext.h  ekFrame.c  ekFrame.h  ekIntrinsics.c  ekIntrinsics.h  ekLexer.c  ekLexer.h  ekLexer.re  ekLexer.re.c  ekMap.c  ekMap.h  ekObject.c  ekObject.h  ekOp.h  ekParser.c  ekParser.h  ekParser.y  ekString.c  ekString.h  ekSyntax.c  ekSyntax.h  ekTypes.c  ekTypes.h  ekValue.c  ekValue.h  ekValueType.c  ekValueType.h  ekValueTypeArray.c  (+24 more)
lib/core/: ekCode.c  ekCompiler.h  ekIntrinsics.c  ekLexer.h  ekLexer.re.c  ekObject.c  ekOp.c  ekParser.c  ekString.h  ekTypes.c  ekValue.c  ekValueType.c  ekValueType.h  ekValueTypeNull.c  ekValueTypeObject.c
lib/docsrc/: faq.ekd  guts.ekd
lib/extras/: ekxDisasm.c
lib/modules/: ekmAll.c  ekmJSON.h  ekmPCRE.c  ekmPCRE.h
scripts/: astyle.conf  astyleAll.sh  gen_lexer_names.pl  tests.pl
tests/: 002_integers.ek  002_integers.yap  003_floats.ek  004_coverage.yap  004_varargs.ek  005_testharness1_E1.yap  007_use_global_in_func.yap  008_too_many_args_to_func.yap  010_call_cfunction_improperly_E1.yap  011_call_object.ek  011_call_object.yap  012_call_parent_obj_func.ek  012_call_parent_obj_func.yap  013_call_base_init.ek  013_call_base_init.yap  014_use_this.ek  015_use_nonexistent_var_E1.yap  016_for_loop_array.ek  016_for_loop_array.yap  017_and_or.ek  018_equality.yap  019_inherits.ek  019_inherits.yap  020_call_base_func.ek  020_call_base_func.yap  021_ignore_conditional.yap  022_else_statement.ek  023_break.yap  024_not.yap  025_assert_E1.ek  026_bitwise.ek  027_for_loop_object.ek  028_format.ek  028_format.yap  029_array_index.ek  030_conversions.ek  031_array_manip.ek  031_array_manip.yap  032_eval.ek  033_print.ek  (+26 more)
tools/: CMakeLists.txt
tools/ekdoc/: CMakeLists.txt  dynBase.h  dynString.c  dynString.h  main.c
tools/ektest/: CMakeLists.txt  main.c  test_py.ek  this.ek
tools/scripts/: astyleAll.sh  tests.pl  uncrustify.cfg  uncrustifyAll.sh
tools/vim/syntax/: eureka.vim
vim/ftdetect/: eureka.vim  yap.vim
vim/syntax/: eureka.vim  yap.vim
yap/: CMakeLists.txt  yapArray.c  yapArray.h  yapBlock.c  yapBlock.h  yapChunk.c  yapChunk.h  yapCode.c  yapCode.h  yapCompiler.c  yapCompiler.h  yapContext.c  yapContext.h  yapCore.c  yapCore.h  yapDict.c  yapDict.h  yapFrame.c  yapFrame.h  yapHash.c  yapHash.h  yapIntrinsics.c  yapIntrinsics.h  yapLexer.c  yapLexer.h  yapLexer.re  yapLexer.re.c  yapModule.c  yapModule.h  yapObject.c  yapObject.h  yapOp.c  yapOp.h  yapParser.lt  yapParser.y  yapSyntax.c  yapSyntax.h  yapTokenizer.y  yapTypes.c  yapTypes.h  (+10 more)
yap/core/: yap.h  yapArray.c  yapArray.h  yapBlock.c  yapBlock.h  yapChunk.c  yapChunk.h  yapCode.c  yapCode.h  yapCompiler.c  yapCompiler.h  yapContext.c  yapContext.h  yapFrame.c  yapFrame.h  yapHash.c  yapHash.h  yapLexer.c  yapLexer.h  yapLexer.re  yapLexer.re.c  yapMap.c  yapMap.h  yapObject.c  yapObject.h  yapOp.c  yapOp.h  yapParser.lt  yapParser.y  yapString.c  yapString.h  yapSyntax.c  yapSyntax.h  yapTypes.c  yapTypes.h  yapVM.c  yapVM.h  yapValue.c  yapValue.h  yapVariable.c  (+1 more)
yap/extras/: yapxDisasm.c  yapxDisasm.h  yapxDot.c  yapxDot.h
yap/intrinsics/: yapiArray.c  yapiArray.h  yapiConversions.c  yapiConversions.h  yapiCore.c  yapiCore.h  yapiInheritance.c  yapiInheritance.h
yap/modules/: yapmAll.c  yapmAll.h  yapmJSON.c  yapmJSON.h  yapmPCRE.c  yapmPCRE.h
yapconsole/: CMakeLists.txt  main.c
yapgame/: main.c  pong.yap
yaptest/: CMakeLists.txt  cmp.yap  dict.yap  main.c  test.yap
